syntax = "proto3";

package schedule;

option go_package = "C:/Users/Andrew/GolandProjects/dolittle2/genrpc";

import "google/protobuf/timestamp.proto";

message Schedule {
    uint64 id = 1;
    string aid_name = 2;
    uint64 aid_per_day = 3;
    uint64 user_id = 4;
    int64 duration = 5;
    google.protobuf.Timestamp create_at = 6;
}

message CreateScheduleRequest {
    string aid_name = 1;
    uint64 aid_per_day = 2;
    uint64 user_id = 3;
    int64 duration = 4;
}

message KeyValuePair {
    string key = 1;
    string value = 2;
}

message CreateScheduleResponse {
    uint64 id = 1;
    string message = 2;
}

message GetUserScheduleRequest {
    uint64 id = 1;
}

message GetUserScheduleResponse {
    repeated uint64 schedules = 1;
    string message = 2;
}

message GetScheduleRequest {
    uint64 user_id = 1;
    uint64 schedule_id = 2;
}

message GetDailyScheduleResponse {
    repeated string formatted_times = 1;
}

message GetNextTakingsRequest {
    uint64 user_id = 1;
}

message GetNextTakingsResponse {
    repeated KeyValuePair schedule = 1; 
    string message = 2;
}

service ScheduleService {
    rpc CreateSchedule(CreateScheduleRequest) returns (CreateScheduleResponse);
    rpc GetUserSchedule(GetUserScheduleRequest) returns (GetUserScheduleResponse);
    rpc GetSchedule(GetScheduleRequest) returns (GetDailyScheduleResponse);
    rpc GetNextTakings(GetNextTakingsRequest) returns (GetNextTakingsResponse);  // Исправлено
}
